# kitchenmotors-api

./: .env.example  kitchenmotor.db  pyproject.toml  requirements.txt
app/: db.py  main.py
app/api/: kitchenmotor.db  router.py
app/api/routes/: base_data.py  import_routes.py  menu.py  menu_periodes.py  planning.py  recipes.py  workfloor.py
app/core/: config.py
app/schemas/: menu.py  menu_periodes.py  planning.py  recipes.py
app/services/: date_utils.py  db_init.py  import_excel.py  import_service.py  menu_periodes_service.py  menu_selectie.py  menu_service.py  overview.py  pdf_export.py  planner_service.py  planning.py  planning_dependencies.py  planning_export.py  planning_overrides.py  planning_storage.py  planning_v2.py  planning_v3.py  planning_v3_context.py  planning_v3_dataframe.py  planning_v3_execution.py  planning_v3_models.py  planning_v3_production.py  planning_v3_rules.py  planning_v3_scheduler.py  planning_v3_sequence.py  post_werkuren_service.py  production_engine.py  recepten.py  recipes_service.py  toestel_conflicten.py  workfloor_service.py
db/: connection.py  migrations.py  schema.py
planner/: planning.py
scripts/: reset_local_data.py
tests/: test_health.py
