[project]
name = "kitchenmotors-api"
version = "0.1.0"
description = "KitchenMotors planning API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pandas>=3.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]
